# cats_are_funny

./: pyproject.toml  requirements.txt
cat_posts/: admin.py  apps.py  models.py  serializer.py  tests.py  urls.py  views.py
cat_posts/migrations/: 0001_initial.py
config/: settings.py  urls.py
