[tool.poetry]
name = "cats_are_funny"
version = "0.1.0"
description = ""
authors = ["NyxofDarkness <ibelieve.as@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.11.1"
django-debug-toolbar = "^3.2"
whitenoise = "^5.2.0"
Pillow = "^8.1.2"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
